<resources>
    <string name="app_name" translatable="false">Sakhi</string>
    <string name="PREF_NAME" translatable="false">Sakhi-pref-1</string>
    <string name="PREF_D2D_API_KEY" translatable="false">JWT-Token_A</string>
    <string name="PREF_primary_API_KEY" translatable="false">JWT-Token_B</string>
    <string name="PREF_rem_me_uname" translatable="false">user-name-local-saved</string>
    <string name="PREF_rem_me_pwd" translatable="false">password-local-saved</string>
    <string name="PREF_rem_me_state" translatable="false">state_user-local-saved</string>
    <string name="PREF_location_record_entry" translatable="false">location-record</string>
    <string name="PREF_full_load_pull_progress" translatable="false">full_load_sync_pull_amrit</string>
    <string name="PREF_first_pull_amrit_last_synced_page" translatable="false">full_load_sync_pull_amrit_first_sync_last_saved_page</string>
    <string name="PREF_current_saved_language" translatable="false">Locale.Helper.Selected.Language</string>
    <string name="PREF_current_dp_uri" translatable="false">DP_URI_cat</string>
    <string name="tv_text_welcome">Welcome, please login</string>
    <string name="tv_text_welcome_user">Welcome, %s</string>
    <string name="tv_text_sign_in">Log in to continue</string>
    <string name="tv_text_select_language">Please Select Your language</string>
    <string name="text_english" translatable="false">English</string>
    <string name="text_hindi" translatable="false">हिंदी</string>
    <string name="text_assamese" translatable="false">অসমীয়া</string>
    <string name="cd_assam_nhm_logo" translatable="false">ASSAM NHM_LOGO</string>
    <string name="til_username_hint_text">Username</string>
    <string name="til_password_hint_text">Password</string>
    <string name="cb_login_remember_me_text">Remember me</string>
    <string name="btn_login_forgot_password_text">Forgot Password?</string>
    <string name="btn_login_text">Login</string>
    <string name="menu_home">Home</string>
    <string name="nhhr_first_name_hof">First Name of Head of the family</string>
    <string name="nhhr_last_name_hof">Last Name / Surname of head of the family</string>
    <string name="nhhr_mob_no_hof">Mobile No of Head of Family</string>
    <string name="nhhr_house_no">House No.</string>
    <string name="nhhr_ward_no">Ward No.</string>
    <string name="nhhr_ward_name">Ward Name</string>
    <string name="nhhr_mohalla_name">Mohalla Name</string>
    <string name="nhhr_poverty_line">Poverty Line</string>
    <string-array name="nhhr_poverty_line_array">
        <item>APL</item>
        <item>BPL</item>
        <item>Don\'t Know</item>
    </string-array>
    <string name="btn_frag_nhhr_prev">previous</string>
    <string name="btn_frag_nhhr_next">next</string>
    <string name="nhhr_type_residential_area">Type of residential area</string>
    <string name="nhhr_type_residential_area_1">Rural</string>
    <string name="nhhr_type_residential_area_2">Urban</string>
    <string name="nhhr_type_residential_area_3">Tribal</string>
    <string name="nhhr_type_residential_area_4">Other</string>
    <string-array name="nhhr_type_residential_area_array">
        <item>@string/nhhr_type_residential_area_1</item>
        <item>@string/nhhr_type_residential_area_2</item>
        <item>@string/nhhr_type_residential_area_3</item>
        <item>@string/nhhr_type_residential_area_4</item>
    </string-array>
    <string name="nhhr_type_of_house">Type of house</string>
    <string name="nhhr_type_of_house_1">None</string>
    <string name="nhhr_type_of_house_2">Kuchha</string>
    <string name="nhhr_type_of_house_3">Pucca</string>
    <string name="nhhr_type_of_house_4">Other</string>
    <string-array name="nhhr_type_of_house_array">
        <item>@string/nhhr_type_of_house_1</item>
        <item>@string/nhhr_type_of_house_2</item>
        <item>@string/nhhr_type_of_house_3</item>
        <item>@string/nhhr_type_of_house_4</item>
    </string-array>
    <string name="nhhr_house_own">House ownership</string>
    <string-array name="nhhr_house_own_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="nhhr_separate_kitchen">Separate Kitchen</string>
    <string-array name="nhhr_separate_kitchen_array">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="nhhr_fuel_cooking">Type of fuel used for Cooking</string>
    <string name="nhhr_fuel_cooking_1">Firewood</string>
    <string name="nhhr_fuel_cooking_2">Crop Residue</string>
    <string name="nhhr_fuel_cooking_3">Cow dung cake</string>
    <string name="nhhr_fuel_cooking_4">Coal</string>
    <string name="nhhr_fuel_cooking_5">Kerosene</string>
    <string name="nhhr_fuel_cooking_6">LPG</string>
    <string name="nhhr_fuel_cooking_7">Other</string>
    <string-array name="nhhr_fuel_cooking_array">
        <item>@string/nhhr_fuel_cooking_1</item>
        <item>@string/nhhr_fuel_cooking_2</item>
        <item>@string/nhhr_fuel_cooking_3</item>
        <item>@string/nhhr_fuel_cooking_4</item>
        <item>@string/nhhr_fuel_cooking_5</item>
        <item>@string/nhhr_fuel_cooking_6</item>
        <item>@string/nhhr_fuel_cooking_7</item>
    </string-array>
    <string name="nhhr_primary_water">Primary Source of Water</string>
    <string name="nhhr_primary_water_1">Tap Water</string>
    <string name="nhhr_primary_water_2">Hand pump inside house</string>
    <string name="nhhr_primary_water_3">Hand pump outside of house</string>
    <string name="nhhr_primary_water_4">Well</string>
    <string name="nhhr_primary_water_5">Tank</string>
    <string name="nhhr_primary_water_6">River</string>
    <string name="nhhr_primary_water_7">Pond</string>
    <string name="nhhr_primary_water_8">Other</string>
    <string-array name="nhhr_primary_water_array">
        <item>@string/nhhr_primary_water_1</item>
        <item>@string/nhhr_primary_water_2</item>
        <item>@string/nhhr_primary_water_3</item>
        <item>@string/nhhr_primary_water_4</item>
        <item>@string/nhhr_primary_water_5</item>
        <item>@string/nhhr_primary_water_6</item>
        <item>@string/nhhr_primary_water_7</item>
        <item>@string/nhhr_primary_water_8</item>
    </string-array>
    <string name="nhhr_avail_electricity">Availability of Electricity</string>
    <string name="nhhr_avail_electricity_1">Electricity Supply</string>
    <string name="nhhr_avail_electricity_2">Generator</string>
    <string name="nhhr_avail_electricity_3">Solar Power</string>
    <string name="nhhr_avail_electricity_4">Kerosene Lamp</string>
    <string name="nhhr_avail_electricity_5">Other</string>
    <string-array name="nhhr_avail_electricity_array">
        <item>@string/nhhr_avail_electricity_1</item>
        <item>@string/nhhr_avail_electricity_2</item>
        <item>@string/nhhr_avail_electricity_3</item>
        <item>@string/nhhr_avail_electricity_4</item>
        <item>@string/nhhr_avail_electricity_5</item>
    </string-array>
    <string name="nhhr_avail_toilet">Availability of Toilet</string>
    <string name="nhhr_avail_toilet_1">Flush toilet with running water</string>
    <string name="nhhr_avail_toilet_2">Flush toilet without water</string>
    <string name="nhhr_avail_toilet_3">Pit toilet with running water supply</string>
    <string name="nhhr_avail_toilet_4">Pit toilet without water supply</string>
    <string name="nhhr_avail_toilet_5">Other</string>
    <string name="nhhr_avail_toilet_6">None</string>
    <string-array name="nhhr_avail_toilet_array">
        <item>@string/nhhr_avail_toilet_1</item>
        <item>@string/nhhr_avail_toilet_2</item>
        <item>@string/nhhr_avail_toilet_3</item>
        <item>@string/nhhr_avail_toilet_4</item>
        <item>@string/nhhr_avail_toilet_5</item>
        <item>@string/nhhr_avail_toilet_6</item>
    </string-array>
    <string name="nhhr_type_residential_area_other">Other type of residential area</string>
    <string name="nhhr_fuel_cooking_other">Other Type of fuel used for Cooking</string>
    <string name="nhhr_primary_water_other">Other Primary Source of Water</string>
    <string name="nhhr_avail_electricity_other">Other availability of Electricity</string>
    <string name="nhhr_avail_toilet_other">Other Availability of Toilet</string>
    <string name="btn_frag_nhhr_to_ben">Continue to Beneficiary</string>
    <string name="nbr_image">Image of Beneficiary</string>
    <string name="nbr_dor">Date of Registration</string>
    <string name="nbr_nb_first_name">First Name</string>
    <string name="nbr_nb_last_name">Last Name / Surname</string>
    <string name="nbr_nb_age_unit">Age Unit</string>
    <string-array name="nbr_age_unit_array">
        <item name="nbr_age_unit_1">Day</item>
        <item name="nbr_age_unit_2">Month</item>
        <item name="nbr_age_unit_3">Year</item>
    </string-array>
    <string-array name="nbr_gender_array">
        <item name="nbr_gender_1">Male</item>
        <item name="nbr_gender_2">Female</item>
        <item name="nbr_gender_3">Transgender</item>
    </string-array>
    <string-array name="nbr_reproductive_status_array">
        <item>Eligible Couple</item>
        <item>Antenatal Mother</item>
        <item>Delivery Stage</item>
        <item>Postnatal Mother-Lactating Mother</item>
        <item>Menopause Stage</item>
        <item>Teenager</item>
        <item>Other</item>
    </string-array>
    <string name="cbac_ask_pat">Ask if Patient has any of these Symptoms</string>
    <string name="cbac_early_detection">Early Detection</string>
    <string name="cbac_hint_age">What is your age?</string>
    <string name="cbac_hint_smoke">Do you smoke or consume smokeless products such as gutka or khaini?</string>
    <string name="cbac_hint_alcohol">Do you consume alcohol daily?</string>
    <string name="cbac_hint_waist">Measurement of waist (in cm)</string>
    <string name="cbac_hint_pa">Do you undertake any physical activities for minimum of 150 minutes in a week?</string>
    <string name="cbac_hint_fh">Do you have a family history (any one of your parents or siblings) of high blood pressure, diabetes and heart disease?</string>
    <string name="cbac_ask_pat_note">Note :</string>
    <string name="cbac_ast1">* If the response is Yes- action suggested: Collect the sputum sample and send to nearest TB testing center.</string>
    <string name="btn_continue_text">Continue</string>
    <string name="service_type_dd_state_text">State</string>
    <string name="service_type_dd_district_text">District</string>
    <string name="service_type_dd_block_text">Block</string>
    <string name="service_type_dd_village_text">Village</string>
    <string name="home_icon_title_all_ben">All Beneficiaries</string>
    <string name="home_icon_title_elig_coup">Eligible Couples</string>
    <string name="home_icon_title_child_care">Child Care</string>
    <string name="home_icon_title_mother_care">Mother Care</string>
    <string name="home_icon_title_death_rep">Death Reports</string>
    <string name="home_icon_title_gen_op">General OP Care</string>
    <string name="home_icon_title_hrp_cases">HRP Cases</string>
    <string name="home_icon_title_imm_due">Immunization Due</string>
    <string name="home_icon_title_menopause_stage_list">Menopause Stage List</string>
    <string name="home_icon_title_ncd">NCD</string>
    <string name="home_icon_title_village_lvl_forms">Village Level Forms</string>
    <string name="frag_service_type_title">Select Village</string>
    <string name="frag_nhhr_title">New Household Registration</string>
    <string name="home_icon_all_household">All Household List</string>
    <string name="tv_text_select_village">Please select the village below.</string>
    <string name="select_death_type">Select Beneficiary Death Type</string>
    <string name="death_type_cdr">CDR (Child Death Review)</string>
    <string name="death_type_mdsr">MDSR (Maternal Death Surveillance and Response)</string>
</resources>