<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_allBenFragment"
            app:destination="@id/allBenFragment" />
        <action
            android:id="@+id/action_nav_home_to_allHouseholdFragment"
            app:destination="@id/allHouseholdFragment" />
        <action
            android:id="@+id/action_nav_home_to_childCareFragment"
            app:destination="@id/childCareFragment" />
        <action
            android:id="@+id/action_nav_home_to_motherCareFragment"
            app:destination="@id/motherCareFragment" />
        <action
            android:id="@+id/action_nav_home_to_deathReportsFragment"
            app:destination="@id/deathReportsFragment" />
        <action
            android:id="@+id/action_nav_home_to_generalOpCareFragment"
            app:destination="@id/generalOpCareFragment" />
        <action
            android:id="@+id/action_nav_home_to_hrpCasesFragment"
            app:destination="@id/hrpCasesFragment" />
        <action
            android:id="@+id/action_nav_home_to_immunizationDueFragment"
            app:destination="@id/immunizationDueFragment" />
        <action
            android:id="@+id/action_nav_home_to_menopauseStageFragment"
            app:destination="@id/menopauseStageFragment" />
        <action
            android:id="@+id/action_nav_home_to_ncdFragment"
            app:destination="@id/ncdFragment" />
        <action
            android:id="@+id/action_nav_home_to_villageLevelFormsFragment"
            app:destination="@id/villageLevelFormsFragment" />
        <action
            android:id="@+id/action_nav_home_to_eligibleCoupleFragment"
            app:destination="@id/eligibleCoupleFragment" />
        <action
            android:id="@+id/action_nav_home_to_serviceTypeFragment"
            app:destination="@id/serviceTypeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_newHouseholdFragment"
            app:destination="@id/newHouseholdFragment" />
    </fragment>
    <fragment
        android:id="@+id/allHouseholdFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.all_household.AllHouseholdFragment"
        android:label="@string/home_icon_all_household"
        tools:layout="@layout/fragment_all_household" >
        <action
            android:id="@+id/action_allHouseholdFragment_to_newHouseholdFragment"
            app:destination="@id/newHouseholdFragment" />
    </fragment>
    <fragment
        android:id="@+id/allBenFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.all_ben.AllBenFragment"
        android:label="@string/home_icon_title_all_ben"
        tools:layout="@layout/fragment_all_ben" />
    <fragment
        android:id="@+id/eligibleCoupleFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.eligible_couple.EligibleCoupleFragment"
        android:label="@string/home_icon_title_elig_coup"
        tools:layout="@layout/fragment_eligible_couple" />
    <fragment
        android:id="@+id/childCareFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.child_care.ChildCareFragment"
        android:label="@string/home_icon_title_child_care"
        tools:layout="@layout/fragment_child_care" />
    <fragment
        android:id="@+id/motherCareFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.mother_care.MotherCareFragment"
        android:label="@string/home_icon_title_mother_care"
        tools:layout="@layout/fragment_mother_care" />
    <fragment
        android:id="@+id/deathReportsFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.death_reports.DeathReportsFragment"
        android:label="@string/home_icon_title_death_rep"
        tools:layout="@layout/fragment_death_reports" />
    <fragment
        android:id="@+id/generalOpCareFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.general_op_care.GeneralOpCareFragment"
        android:label="@string/home_icon_title_gen_op"
        tools:layout="@layout/fragment_general_op_care" />
    <fragment
        android:id="@+id/hrpCasesFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.hrp_cases.HrpCasesFragment"
        android:label="@string/home_icon_title_hrp_cases"
        tools:layout="@layout/fragment_hrp_cases" />
    <fragment
        android:id="@+id/immunizationDueFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.immunization_due.ImmunizationDueFragment"
        android:label="@string/home_icon_title_imm_due"
        tools:layout="@layout/fragment_immunization_due" />
    <fragment
        android:id="@+id/menopauseStageFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.menopause_stage.MenopauseStageFragment"
        android:label="@string/home_icon_title_menopause_stage_list"
        tools:layout="@layout/fragment_menopause_stage" />
    <fragment
        android:id="@+id/ncdFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.non_communicable_disease.NcdFragment"
        android:label="@string/home_icon_title_ncd"
        tools:layout="@layout/fragment_ncd" />
    <fragment
        android:id="@+id/villageLevelFormsFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.village_level_forms.VillageLevelFormsFragment"
        android:label="@string/home_icon_title_village_lvl_forms"
        tools:layout="@layout/fragment_village_level_forms" />
    <fragment
        android:id="@+id/serviceTypeFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.service_type.ServiceTypeFragment"
        android:label="@string/frag_service_type_title"
        tools:layout="@layout/fragment_service_type" >
        <action
            android:id="@+id/action_serviceTypeFragment_to_nav_home"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/newHouseholdFragment"
        android:name="org.piramalswasthya.sakhi.ui.home_activity.all_household.new_household_registration.NewHouseholdFragment"
        android:label="@string/frag_nhhr_title"
        tools:layout="@layout/fragment_new_household" />

</navigation>