<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_normal">

    <TextView
        android:id="@+id/tv_type_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal"
        android:text="@string/select_death_type"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_death_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_normal"
        app:layout_constraintTop_toBottomOf="@id/tv_type_title_text">

        <RadioButton
            android:id="@+id/rb_cdr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/colorPrimary"
            android:padding="@dimen/padding_normal"
            android:text="@string/death_type_cdr"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

        <RadioButton
            android:id="@+id/rb_mdsr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/colorPrimary"
            android:padding="@dimen/padding_normal"
            android:text="@string/death_type_mdsr"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_normal"
        android:text="@string/btn_continue_text"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintTop_toBottomOf="@id/rg_death_type" />


</androidx.constraintlayout.widget.ConstraintLayout>