<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home_activity.all_household.new_household_registration.NewHouseholdFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_nhhr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="scrollable"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp2_nhhr"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="@dimen/padding_small">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/btn_frag_nhhr_prev"
            android:textColor="?attr/colorSecondary"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:visibility="gone"
            android:text="@string/btn_frag_nhhr_next"
            android:textColor="?attr/colorSecondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit_form"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_frag_nhhr_to_ben"
            android:textColor="?attr/colorSecondary"
            android:visibility="gone"
            tools:visibility="visible"
            />
    </LinearLayout>


</LinearLayout>