<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.service_location_activity.ServiceLocationActivity">

    <data>
        <variable
            name="viewModel"
            type="org.piramalswasthya.sakhi.ui.service_location_activity.ServiceTypeViewModel" />
    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_login_item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_normal"
            android:elevation="@dimen/padding_wide"
            app:cardCornerRadius="@dimen/padding_wide"
            app:cardElevation="@dimen/padding_wide">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_wide">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{@string/tv_text_welcome_user(viewModel.userName)}"
                    android:paddingTop="@dimen/padding_normal"
                    android:paddingBottom="@dimen/padding_normal"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_select_service_region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding_normal"
                    android:paddingBottom="@dimen/padding_normal"
                    android:text="@string/tv_text_select_village"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_state_dropdown"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_type_dd_state_text"
                    android:labelFor="@id/actv_state_dropdown">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/actv_state_dropdown"
                        listItems="@{viewModel.stateList}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_district_dropdown"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_type_dd_district_text"
                    android:labelFor="@id/actv_district_dropdown">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/actv_district_dropdown"
                        listItems="@{viewModel.districtList}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_block_dropdown"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_type_dd_block_text"
                    android:labelFor="@id/actv_block_dropdown">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/actv_block_dropdown"
                        listItems="@{viewModel.blockList}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_village_dropdown"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/service_type_dd_village_text"
                    android:labelFor="@id/actv_village_dropdown">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/actv_village_dropdown"
                        listItems="@{viewModel.villageList}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/padding_normal"
                    android:padding="@dimen/padding_normal"
                    android:text="@string/btn_continue_text"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:textColor="?attr/colorOnPrimary" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </FrameLayout>
</layout>